--- a/Second/WebContent/css/style.css
+++ b/Second/WebContent/css/style.css
@@ -1150,7 +1150,9 @@ border: 1px solid #e6e6e6;
 	padding:30px 0 30px 0;
 }
 
-
+#parallax1{
+	background-image: url(../img/parallax/img1.jpg);
+}
 /* ===============================
 14. Blog & article
 ================================ */
@@ -1313,6 +1315,12 @@ ul.meta-post li a{
 	margin-bottom:10px;
 }
 
+.color-white {
+	color: #fff;
+}
+.align-center {
+	text-align: center;
+}
 
 
 /* --- Comment --- */
