--- a/Second/WebContent/css/style.css
+++ b/Second/WebContent/css/style.css
@@ -1610,6 +1610,9 @@ ul.time-post li.time{
 	margin-bottom:20px;
 }
 
+#clients {
+	padding-top: 20px;
+}
 /* ===============================
 16. Footer
 ================================ */
