--- a/Second/WebContent/self/css/style.css
+++ b/Second/WebContent/self/css/style.css
@@ -26,7 +26,7 @@ body {
 	font-size:14px;
 	font-weight:300;
 	line-height:1.6em;
-	color:#F4E4E4;
+	color:#656565;
 }
 
 a:active {
@@ -50,7 +50,7 @@ h1,h2, h3, h4, h5, h6 {
 ==================================== */
 
 .container {
-	padding:20px 20px 20px 20px;
+	padding:0 20px 0 20px;
 	position:relative;
 }
 
@@ -105,10 +105,6 @@ img.img-polaroid {
 
 /* --- header -- */
 
-.container {
-  margin-right: 300px;
-  margin-left: 300px;
-}
 
 header .navbar {
     margin-bottom: 0;
